--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "Me",
   "license": "MIT",
   "dependencies": {
+    "chalk": "^4.1.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "mongoose": "^6.5.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
